--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div id="contact-flex">
     <a href="https://github.com/mrsunay" target="_blank" id="profile-link" class="contact-btn"><i class="fab fa-github"></i>
             </a>
-    <a href="mailto:example@example.com" target="_blank" class="contact-btn"><i class="far fa-envelope"></i>
+    <a href="mailto:mrsunay@gmail.com" target="_blank" class="contact-btn"><i class="far fa-envelope"></i>
                 </a>
       </div>
   </section>
